<resources>
    <string name="app_name">Learn App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">Learn App</string>
    <string name="msg_difficulty">"Difficulty: "</string>
    <string name="cat_easy">Easy</string>
    <string name="cat_medium">Medium</string>
    <string name="cat_hard">Hard</string>

    <string name="msg_yes">yes</string>
    <string name="msg_no">no</string>
    <string name="msg_start_test">Start quiz?</string>
    <string name="msg_quiz_about">"This quiz is about "</string>
    <string name="msg_quz_difficulty">"The quiz difficulty is "</string>
    <string name="msg_please_click_left">If you want to start the test please click on the left side, where it says \'YES\'.</string>
    <string name="msg_quiz">Quiz</string>
    <string name="msg_save">Save</string>
    <string name="msg_congratulation_right">Congratulations! You were right!</string>
    <string name="msg_wrong">Oops! You did not guessed the answer! The correct answer was: </string>
    <string name="msg_wrong_play">Oops! You did not guessed the answer! Be more careful next time!</string>
    <string name="msg_quiz_result">Quiz result</string>
    <string name="msg_app_title">ITFest Learn App</string>
    <string name="msg_answer_stats">Answer stats</string>
    <string name="msg_fullname">Full name</string>
    <string name="msg_register">Register</string>
    <string name="msg_nput_invalid">Invalid input</string>
    <string name="msg_search_user">Search user</string>
    <string name="msg_age">Age</string>
    <string name="msg_search_name">Name:</string>
    <string name="msg_search_age">Age:</string>


</resources>
