<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.boldijarpaul.itfest.ui.activities.RegisterActivity">

    <EditText
        android:id="@+id/activity_register_fullname"
        fontPath="fonts/Regular.ttf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/msg_fullname"
        android:textColor="@android:color/black"
        tools:ignore="MissingPrefix" />

    <EditText
        android:id="@+id/activity_register_age"
        fontPath="fonts/Regular.ttf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/msg_age"
        android:inputType="number"
        android:textColor="@android:color/black"
        tools:ignore="MissingPrefix" />


    <TextView
        android:id="@+id/activity_register_register"
        fontPath="fonts/Black.ttf"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_rectangle_reverse"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/msg_register"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:ignore="MissingPrefix" />


</LinearLayout>
